Fix: Navbar takes too much height in mobile view (#8).

--- a/assets/src/scss/site/_vars.scss
+++ b/assets/src/scss/site/_vars.scss
@@ -56,11 +56,9 @@ $base--gap:                                 var(--wp--custom--base--gap);
 $navbar--max-width:                         var(--wp--custom--navbar--max-width);
 $navbar--height:                            var(--wp--custom--navbar--height);
 $navbar--min-padding:                       var(--wp--custom--navbar--min-padding);
-
 $content--max-width:                        var(--wp--custom--content--max-width);
 $content--min-padding:                      var(--wp--custom--content--min-padding);
 $content--padding--autogrow:                unquote('clamp(2rem, 5vw + 1.5rem, 6rem)');
-
 $teaserblock--image-width:                  var(--wp--custom--teaserblock--image-width);
 $teaserblock--teaser-gap:                   4.5rem;
 
@@ -70,6 +68,7 @@ $autogrow--height--spacer:                  unquote('clamp(5rem, 5vw + 3rem, 8re
 
 @include breakpoint(medium) {
     body {
+        --wp--custom--navbar--height:               6.5rem;
         --wp--custom--teaserblock--image-width:     125px;
     }
 }
@@ -77,6 +76,7 @@ $autogrow--height--spacer:                  unquote('clamp(5rem, 5vw + 3rem, 8re
 
 @include breakpoint(large) {
     body {
+        --wp--custom--navbar--height:               8rem;
         --wp--custom--navbar--min-padding:          2rem;
         --wp--custom--content--min-padding:         3rem;
         --wp--custom--teaserblock--image-width:     175px;
